# FinanceBuddy

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/architecture/: high-level-architecture.md
docs/plans/: 2026-04-11-crawler-first-implementation.md  2026-04-12-saxo-bank-crawler-implementation.md
docs/specs/: 2026-04-12-saxo-bank-crawler-design.md
docs/superpowers/plans/: 2026-04-12-saxo-sim-mode.md  2026-04-16-saxo-oauth-auth.md
docs/superpowers/specs/: 2026-04-16-saxo-oauth-auth-design.md
financebuddy/: __init__.py  cli.py  config.py  db.py  ingestion.py  models.py  projections.py  schema.py  snapshots.py
financebuddy/auth/: __init__.py  saxo_callback.py  saxo_oauth.py  token_store.py
financebuddy/connectors/: __init__.py  base.py  demo_bank_api.py  saxo_bank_api.py
financebuddy/services/: crawl_runner.py  currency_conversion.py  reporting.py
spec/: crawler-first-design.md  product-intent.md
tests/: test_cli.py  test_ingestion.py  test_package_import.py  test_projections.py  test_reporting.py  test_schema.py  test_smoke.py
tests/auth/: test_saxo_callback.py  test_saxo_oauth.py  test_token_store.py
tests/connectors/: test_demo_bank_api.py  test_saxo_bank_api.py
tests/fixtures/demo_bank/: accounts.json
tests/fixtures/saxo_bank/: accounts_page_1.json  accounts_page_2.json  balance_acc_1.json  balance_acc_2.json  positions.json
