[project]
name = "financebuddy"
version = "0.1.0"
description = "Local-first finance crawler and portfolio tracker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<0.28",
  "click==8.1.7",
  "pydantic>=2.7,<3.0",
  "typer>=0.12,<0.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
]

[project.scripts]
financebuddy = "financebuddy.cli:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
